Fixes button labels being collapsed per a character in CJK languages (#8212)
* Fixes button labels being collapsed per a character in CJK languages

Closes https://github.com/vector-im/element-web/issues/21287


* Add a comment

--- a/res/css/views/elements/_AccessibleButton.scss
+++ b/res/css/views/elements/_AccessibleButton.scss
@@ -39,6 +39,7 @@ limitations under the License.
         justify-content: center;
         font-size: $font-14px;
         border: none; // override default <button /> styles
+        word-break: keep-all; // prevent button text in Chinese/Japanese/Korean (CJK) from being collapsed
 
         &.mx_AccessibleButton_kind_primary_sm,
         &.mx_AccessibleButton_kind_danger_sm,
